@@ -1354,4 +1354,14 @@ bool CKnownFile::HasProperAICHHashSet() const
 #endif
 }
 
+wxString CKnownFile::GetFeedback() const
+{
+	return	  CFormat(wxT("File name: %s\n")) % GetFileName()
+		+ CFormat(wxT("File size: %s\n")) % CastItoXBytes(GetFileSize())
+		+ CFormat(wxT("Share ratio: %.2f%%\n")) % (((double)statistic.GetAllTimeTransferred() / (double)GetFileSize()) * 100.0)
+		+ CFormat(wxT("Transferred: %s (%s)\n")) % CastItoXBytes(statistic.GetTransferred()) % CastItoXBytes(statistic.GetAllTimeTransferred())
+		+ CFormat(wxT("Requested: %u (%u)\n")) % statistic.GetRequests() % statistic.GetAllTimeRequests()
+		+ CFormat(wxT("Accepted: %d (%d)\n")) % statistic.GetAccepts() % statistic.GetAllTimeAccepts()
+		+ CFormat(wxT("Complete Sources: %u\n")) % m_nCompleteSourcesCount;
+}
 // File_checked_for_headers
