@@ -1,6 +1,6 @@
 Version 2.2.1 - ???
 ----------
-2008-03-??
+2008-05-??
 
 	Bas Zoetekouw:
 		* Patch for debian bug #350396: "amule depletes entropy pool".
@@ -100,6 +100,7 @@ Version 2.2.1 - ???
 		* Added checks for a POSIX compliant regex library.
 		* Fixed #1289: amule fails to build on non glibc systems (e.g. uclibc)
 		* Hungarian translation.
+		* Allow generating feedback from shared files.
 
 	Hermit:
 		* Patch for amulecmd history which ensures that when the same command
